# PicoNodes

./: .gitignore  .gitmodules  README.org
docs/: #Report.org#  .#Report.org  ISA.org  PicoStorm.org  PicoTalk-Tx-FSM.org  PicoTalk-timing.org  PicoTalk.org  Platform-architecture.org  Report.org  Terminology.org  User_manual_PICONODE-COMPUTE.org  User_manual_PICONODE-LED  User_manual_PICONODE-LED.org  User_manual_PICONODE-SWITCH  User_manual_PICONODE-SWITCH.org  architecture.docx  exercises.org  frageformular_larare.docx  frågeformulär_elever.org  frågeformulär_lärare.org  piconodes.bib  plattform_arch.docx  project_plan.xlsx  tillstandsmall.doc  user_instructions.org
firmware/blinky/: Cargo.toml
firmware/cortex-m-quickstart/: Cargo.toml
firmware/downloader/: Makefile  build-mkspiffs.sh  partitions.csv  sdkconfig  wifi-example.c
firmware/node-compute/blinky/: Cargo.toml
firmware/node-compute/blinky/src/: main.rs
firmware/node-compute/opendrainy-rtfm/: Cargo.toml  memory.x
firmware/node-compute/opendrainy-rtfm/src/: expanded.rs  main.rs
firmware/node-compute/piconode-switch/: Cargo.toml  memory.x
firmware/node-compute/piconode-switch/src/: main.rs
ide/: .sbtopts  .scalafmt.conf  README.org  build.sbt  dbdump.sql
ide/picoasm/: build.sbt  test.picoasm
ide/picoide/: scalajs.webpack.config.js
ide/project/: plugins.sbt
pcb/: Components.org  module_l.eli  module_side.lib  proj_mod.dch  test_mod.dip  ~module_l.eli~  ~module_side.lib~  ~proj_mod.dch~  ~test_mod.dip~
pcb/button-node/: button-node-cache.lib  button-node-rescue.lib  button-node.kicad_pcb  button-node.sch  fp-lib-table  sym-lib-table
pcb/compute-node/: compute-node-cache.lib  compute-node.kicad_pcb  compute-node.sch  fp-lib-table
pcb/compute-node-breakout/: more_flash_mod.dch  more_flash_mod.dip  proj_mod.dch  test_mod.dip
pcb/debug-mezzanine/: debug-mezzanine-cache.lib  debug-mezzanine.kicad_pcb  debug-mezzanine.sch  fp-lib-table  sym-lib-table
pcb/digit-module/: custom.lib  digit-module-cache.lib  digit-module.bak  digit-module.kicad_pcb  digit-module.kicad_pcb-bak  digit-module.sch  enclosure.scad  fp-lib-table  led_matrix.sch  part notes.txt  sym-lib-table
pcb/digit-node-breakout/: custom.bck  digit-node-cache.lib  digit-node.bak  digit-node.kicad_pcb  digit-node.kicad_pcb-bak  digit-node.pro  digit-node.sch  digit-node.stl  fp-lib-table  (+4 more)
testclient/: Cargo.toml
(+175 files in other folders)
