[package]
name = "blinky"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo@nullable.se>", "Therese Kennerberg <tke@kth.se>"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m = "0.4"
cortex-m-semihosting = "0.2"
panic-semihosting = "0.1.0"

[dependencies.cortex-m-rt]
version = "0.4.0"
# version = "0.3.15"
# features = ["abort-on-panic"]

[dependencies.stm32f0x0]
features = ["rt"]

[dependencies.picorunner]
path = "../picorunner"

[dependencies.picotalk]
path = "../picotalk"
