[package]
name = "opendrainy-rtfm"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo@nullable.se>", "Therese Kennerberg <tke@kth.se>"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
opt-level = "z"
lto = true
debug = true

[dependencies]
cortex-m = "0.4"
cortex-m-semihosting = "0.2"
panic-semihosting = "0.1.0"
cortex-m-rtfm = "0.3.2"
nb = "0.1.1"
picostorm = { path = "../picostorm/" }

[dependencies.cortex-m-rt]
version = "0.4.0"
# version = "0.3.15"
# features = ["abort-on-panic"]

[dependencies.stm32f0x0-hal]
version = "0.1.3"
features = ["rt", "unproven", "unproven_opendrain_input"]

[dependencies.embedded-hal]
version = "0.1.2"
features = ["unproven"]
